# Devmate

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
manifests/a/ADELA/Devmate/0.1.0/: ADELA.Devmate.installer.yaml  ADELA.Devmate.locale.en-US.yaml  ADELA.Devmate.yaml
manifests/a/ADELA/Devmate/0.1.4/: ADELA.Devmate.installer.yaml  ADELA.Devmate.locale.en-US.yaml  ADELA.Devmate.yaml
packaging/winget/: README.md
src/: cli.rs  errors.rs  fswalk.rs  lib.rs  main.rs  models.rs  output.rs
src/commands/: analyze.rs  doctor.rs  env.rs  files.rs  git.rs  json.rs  jwt.rs  kill.rs  lifecycle.rs  mod.rs  setup.rs  system.rs
tests/: cli.rs
