[package]
name = "devmate"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "A polished developer companion CLI for project analysis, files, JSON, env, git, JWT, system, and toolchain health checks."
license = "MIT"
readme = "README.md"
repository = "https://github.com/GOALLINNOOUT/Devmate"
homepage = "https://github.com/GOALLINNOOUT/Devmate"
documentation = "https://github.com/GOALLINNOOUT/Devmate#readme"
keywords = ["cli", "developer-tools", "diagnostics", "jwt", "git"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**",
    "tests/**",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "SECURITY.md",
]

[dependencies]
anyhow = "1"
anstream = "0.6"
anstyle = "1"
base64 = "0.22"
battery = "0.7"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive", "wrap_help"] }
comfy-table = "7"
crossterm = "0.29"
git2 = "0.19"
hex = "0.4"
ignore = "0.4"
inquire = "0.7"
jsonwebtoken = "9"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.30"
thiserror = "1"
which = "6"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[workspace.metadata.dist]
cargo-dist-version = "0.28.0"
ci = "github"
installers = ["shell", "powershell"]
targets = [
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
]
install-updater = false
